--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
         <li>
           <a href="#" onclick="CopySelectedText()">
             <i class="ri-clipboard-line"></i>
-            copy text
+            copy
           </a>
         </li>
         <li>
           <a href="#" onclick="speak()">
             <i class="ri-user-voice-line"></i>
-            read text
+            read
           </a>
         </li>
         <li>
