Solving the page refresh problem when copying text

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div id="myContextMenu">
       <ul>
         <li>
-          <a href="#" onclick="CopySelectedText()">
+          <a href="#" onclick="CopySelectedText(event)">
             <i class="ri-clipboard-line"></i>
             copy
           </a>
