--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
       <p>&copy; 2023 My Blog. All rights reserved.</p>
     </footer>
 
+    <script src="assets/js/alert.js"></script>
     <script src="assets/js/contextMenu.js"></script>
   </body>
 </html>
