hide copy btn when selection is collapsed

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <!-- Context menu -->
     <div id="myContextMenu">
       <ul>
-        <li>
+        <li id="copyTextBtn">
           <a href="#" onclick="CopySelectedText(event)">
             <i class="ri-clipboard-line"></i>
             copy
