hide read btn when selection is collapsed

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             copy
           </a>
         </li>
-        <li>
+        <li id="readTextBtn">
           <a href="#" onclick="speak()">
             <i class="ri-user-voice-line"></i>
             read
